@@ -25,12 +25,37 @@
 #if __cplusplus >= 201103L
     #define RCPP_UNORDERED_SET std::unordered_set
     #define RCPP_UNORDERED_MAP std::unordered_map
+    
+    namespace std { 
+        template<>
+        struct hash<Rcpp::String> {
+            std::size_t operator()(const Rcpp::String& key) const {
+                return pointer_hasher( key.get_sexp() ) ;
+            }
+            hash<SEXP> pointer_hasher ;
+        };
+    }
+  
 #elif defined(HAS_TR1_UNORDERED_SET)
     #define RCPP_UNORDERED_SET std::tr1::unordered_set
     #define RCPP_UNORDERED_MAP std::tr1::unordered_map
+    
+    namespace std { 
+        namespace tr1 { 
+            template<>
+            struct hash<Rcpp::String> {
+                std::size_t operator()(const Rcpp::String& key) const {
+                    return pointer_hasher( key.get_sexp() ) ;
+                }
+                hash<SEXP> pointer_hasher ;
+            };
+        }
+    }
+  
+    
 #else
     #define RCPP_UNORDERED_SET std::set
-    #define RCPP_UNORDERED_MAP std::map
+    #define RCPP_UNORDERED_MAP std::map  
 #endif
 
 #endif
